--- a/v2/Style.css
+++ b/v2/Style.css
@@ -26,17 +26,37 @@ html {
   
 }
 
+.mynd2 {
+  flex-direction: column;
+}
+
+.inn {
+  padding: 0rem 1rem;
+}
+
+.bækur a {
+  color: #000000;}
+
+
 .teksti {
+  color: #000000;
   display: flex;
   flex-direction: column;
   padding: 2rem;
+}
+
+.teksti a {
+  color: #000000;
 }
 
 header {
   background-color: #00bfff;
 }
 
-
+.tengill {
+  color: #000000;
+  flex-direction: column;
+}
 
 p, header h1 {
   max-width: 1200px;
@@ -66,6 +86,11 @@ nav ul li {
   text-align: center;
 }
 
+.konnun1{
+  flex-direction: column;
+
+  
+}
   .content h2{
 
   }
@@ -73,12 +98,22 @@ nav ul li {
 footer {
   background-color: #00bfff;
   padding: 1rem;
-  margin-top: 20.6rem;
-  
-
-}
+  margin-top: 20.6rem;}
 footer p {
   max-width: 1200px;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #afebff;
 }
 
 fieldset {
@@ -105,6 +140,7 @@ fieldset {
   margin: 0 auto;
   max-width: 1200px;
   width: 100%;
+  
   
 }
 
