--- a/v4/Styles.css
+++ b/v4/Styles.css
@@ -113,7 +113,7 @@
     background-image: url(./Myndir/header.jpg);
     background-attachment: fixed;
     background-size: cover;
-    background-color: skyblue;
+    background-color: blue;
     background-position: 50% 50%;
     
     margin-bottom: 5rem;
