--- a/v6/scss/Base.scss
+++ b/v6/scss/Base.scss
@@ -1,19 +1,20 @@
 /*Base*/
 * {
-    margin: 0;
-    padding: 0;
-  }
+  margin: 0;
+  padding: 0;
+}
   
-  /* Reiknum stærð á öllum boxum sem border-box */
-  html {
-    box-sizing: border-box;
+/* Reiknum stærð á öllum boxum sem border-box */
+html {
+  box-sizing: border-box;
   
-    /* Lætur skroll innan síðu taka tíma */
-    scroll-behavior: smooth;
-  }
+  /* Lætur skroll innan síðu taka tíma */
+  scroll-behavior: smooth;
+}
   
-  /* og látum erfast á allt */
-  *, *:before, *:after {
-    box-sizing: inherit;
-  }
-  
+/* og látum erfast á allt */
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
