--- a/v6/scss/layout.scss
+++ b/v6/scss/layout.scss
@@ -1,12 +1,14 @@
 /* Layout */
 body {
   color: var(--color-text);
+  font-family: var(--font-family-base);
   font-size: var(--font-base-body-px);
   line-height: 1.5;
-  font-family: var(--font-family-base);
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
   font-family: var(--font-family-heading);
 }
 
@@ -15,234 +17,234 @@ img {
 }
 
 main {
-    display: grid;
-    grid-template-rows: auto;
-    grid-template-columns: 100%;
+  display: grid;
   
-    gap: var(--vertical-space);
-    margin: var(--vertical-space) auto;
+  gap: var(--vertical-space);
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+  margin: var(--vertical-space) auto;
+  max-width: var(--max-width);
   
-    width: calc(100% - (2 * var(--offset)));
-    max-width: var(--max-width);
+  width: calc(100% - (2 * var(--offset)));
+}
+  
+.info-boxes {
+  
+  display: grid;
+  gap: var(--vertical-space);
+  grid-template-rows: auto;
+  width: 100%;
+}
+  
+@media (min-width: 600px) {
+  :root {
+    --vertical-space: calc(var(--gutter) * 2);
   }
   
   .info-boxes {
-    width: 100%;
   
     display: grid;
+    gap: var(--gutter);
     grid-template-rows: auto;
-    gap: var(--vertical-space);
+    width: 100%;
   }
   
-  @media (min-width: 600px) {
-    ::root {
-      --vertical-space: calc(var(--gutter) * 2);
-    }
-  
-    .info-boxes {
-      width: 100%;
-  
-      display: grid;
-      grid-template-rows: auto;
-      gap: var(--gutter);
-    }
-  
-    .info {
-      display: grid;
-      grid-template-columns: repeat(var(--columns), 1fr);
-      grid-template-rows: auto;
-      gap: var(--gutter);
-    }
-  
-    .info .content {
-      grid-column: 1 / span 6;
-    }
-  
-    .info .image {
-      grid-column: 7 / span 6;
-    }
-  
-    .info-right .content {
-      grid-column: 7 / span 6;
-    }
-  
-    .info-right .image {
-      grid-column: 1 / span 6;
-    }
+  .info {
+    display: grid;
+    gap: var(--gutter);
+    grid-template-columns: repeat(var(--columns), 1fr);
+    grid-template-rows: auto;
   }
-  
-  @media (min-width: 1000px) {
-    .info .content {
-      grid-column: 2 / span 4;
-    }
-  
-    .info .image {
-      grid-column: 7 / span 6;
-    }
-  
-    .info-right .content {
-      grid-column: 8 / span 4;
-    }
-  
-    .info-right .image {
-      grid-column: 1 / span 6;
-    }
-  }
-  
-  /* Header */
-  
-  header {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-  
-    min-height: 100vh;
-  
-    color: #ffffff;
-  
-    background-color: skyblue;
-    background-position: 50% 50%;
-    background-attachment: fixed;
-    background-image: url(./myndir/header.jpg);
-  }
-  
-  header .content {
-    position: relative;
-    z-index: 2;
-  
-    display: flex;
-    flex-direction: column;
-    gap: calc(var(--spacing) * 2);
-  
-    margin: auto;
-    width: calc(100% - (2 * var(--offset)));
-  
-    font-family: var(--font-family-heading);
-    font-size: calc(var(--font-base-size) * 1.5);
-    text-align: center;
-  }
-  
-  header h1 {
-    font-size: 4rem;
-  }
-  
-  header span {
-    font-size: 2rem;
-  }
-  
-  header .protection {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-  
-    background-color: rgba(0, 0, 0, 0.2);
-  }
-  
-  /* Info blokk */
   
   .info .content {
-    margin: auto;
-  }
-  
-  .info .content p {
-    margin-bottom: calc(var(--spacing) * 2);
-  }
-  
-  .info .kicker {
-    text-transform: uppercase;
-    font-size: 0.875rem;
-    font-weight: bold;
+    grid-column: 1 / span 6;
   }
   
   .info .image {
-    display: flex;
-  }
-  
-  .info .image img {
-    margin: auto;
-    transform: rotateZ(2deg);
-  }
-  
-  .info-right .image img {
-    transform: rotateZ(-2deg);
+    grid-column: 7 / span 6;
   }
   
   .info-right .content {
-    order: 2;
+    grid-column: 7 / span 6;
   }
   
-  /* Examples */
+  .info-right .image {
+    grid-column: 1 / span 6;
+  }
+}
   
-  .examples h2 {
-    margin-bottom: var(--spacing);
+@media (min-width: 1000px) {
+  .info .content {
+    grid-column: 2 / span 4;
   }
   
-  /* Cards */
+  .info .image {
+    grid-column: 7 / span 6;
+  }
+  
+  .info-right .content {
+    grid-column: 8 / span 4;
+  }
+  
+  .info-right .image {
+    grid-column: 1 / span 6;
+  }
+}
+  
+/* Header */
+  
+header {
+  background-attachment: fixed;
+  
+  background-color: #87ceeb;
+  background-image: url('./myndir/header.jpg');
+  background-position: 50% 50%;
+  
+  color: #fff;
+  display: flex;
+  flex-direction: column;
+  
+  min-height: 100vh;
+  position: relative;
+}
+  
+header .content {
+  
+  display: flex;
+  flex-direction: column;
+  
+  font-family: var(--font-family-heading);
+  font-size: calc(var(--font-base-size) * 1.5);
+  gap: calc(var(--spacing) * 2);
+  
+  margin: auto;
+  position: relative;
+  text-align: center;
+  width: calc(100% - (2 * var(--offset)));
+  z-index: 2;
+}
+  
+header h1 {
+  font-size: 4rem;
+}
+  
+header span {
+  font-size: 2rem;
+}
+  
+header .protection {
+  
+  background-color: rgba(0, 0, 0, 0.2);
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 1;
+}
+  
+/* Info blokk */
+  
+.info .content {
+  margin: auto;
+}
+  
+.info .content p {
+  margin-bottom: calc(var(--spacing) * 2);
+}
+  
+.info .kicker {
+  font-size: 0.875rem;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+  
+.info .image {
+  display: flex;
+}
+  
+.info .image img {
+  margin: auto;
+  transform: rotateZ(2deg);
+}
+  
+.info-right .image img {
+  transform: rotateZ(-2deg);
+}
+  
+.info-right .content {
+  order: 2;
+}
+  
+/* Examples */
+  
+.examples h2 {
+  margin-bottom: var(--spacing);
+}
+  
+/* Cards */
+.cards {
+  display: grid;
+  gap: var(--gutter);
+  grid-template-rows: auto;
+}
+  
+.card {
+  display: flex;
+  flex-direction: column;
+  
+  width: 100%;
+}
+  
+@media (min-width: 600px) {
   .cards {
     display: grid;
-    grid-template-rows: auto;
-    gap: var(--gutter);
+    grid-template-columns: repeat(var(--columns), 1fr);
   }
   
   .card {
-    display: flex;
-    flex-direction: column;
-  
-    width: 100%;
+    grid-column: span 6;
   }
+}
   
-  @media (min-width: 600px) {
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(var(--columns), 1fr);
-    }
+.card > .image {
+  height: 300px;
+  order: -1;
+}
   
-    .card {
-      grid-column: span 6;
-    }
-  }
+.card > .image img {
   
-  .card > .image {
-    order: -1;
-    height: 300px;
-  }
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  height: 300px;
+  object-fit: cover;
+  object-position: 50% 50%;
   
-  .card > .image img {
-    object-fit: cover;
-    object-position: 50% 50%;
+  width: 100%;
+}
   
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+.card > .content {
+  border: 1px solid #999;
+  border-top: 0;
   
-    width: 100%;
-    height: 300px;
-  }
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  gap: var(--spacing);
+  justify-content: space-between;
   
-  .card > .content {  
-    flex: 1;
+  padding: 0.5rem;
+}
   
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    gap: var(--spacing);
+.card > .content > p {
+  flex: 1;
+}
   
-    padding: 0.5rem;
-    border: 1px solid #999999;
-    border-top: 0;
-  }
-  
-  .card > .content > p {
-    flex: 1;
-  }
-  
-  footer {
-    padding: var(--spacing);
-    color: var(--color-text);
-    background-color: var(--color-primary);
-    text-align: center;
-  }
+footer {
+  background-color: var(--color-primary);
+  color: var(--color-text);
+  padding: var(--spacing);
+  text-align: center;
+}
   
 
